minor: updated information

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       </div>
       <div class="general-div">
         <h3>Who am I?</h3>
-        <p>I'm a Brazilian web devoloper. I was born and raised in Fortaleza, Ceará and I'm a proud to be <strong><em>nordestino</em></strong>. I have working experience as an Architect and as a Lighting Designer, but I'm eager to pursue a new carreer as a Web Developer and starting to apply for job positions in the next few months. I like to describe myself as a <em>nordestino</em> who doesn't go to the beach. ☀️</p>
+        <p>Hey there! I'm a Brazilian back end devoloper. I was born and raised in Fortaleza, Ceará and I'm a proud to be <strong><em>nordestino</em></strong>. I have working experience as an Architect and as a Lighting Designer, but I'm eager to start a new carreer as a Back End Developer as soon as possible. My two preferred programming languages are Ruby and JavaScript (Node.js). I like to describe myself as a <em>nordestino</em> who doesn't go to the beach. ☀️</p>
         <p>Btw, I'm a night owl. 🌚</p>
         <div id="linkedin-button">
-          <a href="https://www.linkedin.com/in/caio-alves-303148119/" target="_blank">
-            Find me on Linkedin!
+          <a href="https://www.troopl.com/praecipito" target="_blank">
+            Here's my portfolio!
           </a>
         </div>
       </div>
       <div class="general-div">
-        <h3>Check out my other social networks!</h3>
+        <h3>Check out my social networks!</h3>
         <ul>
           <li>
             <a href="https://github.com/praecipito" target="_blank">
@@ -37,13 +37,8 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/praecipito/" target="_blank">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/_praecipito">
-              <i class="fa-brands fa-twitter"></i>
+            <a href="https://www.linkedin.com/in/praecipito/" target="_blank">
+              <i class="fa-brands fa-linkedin-in"></i>
             </a>
           </li>
         </ul>
